# mclib

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  main.c  memcheck.c  memcheck.h  test_driver.c
docs/: AllocationStrategies.md  DynamicArray.md  Macros.md  Params.md  StringBuilder.md  UnitTests.md
examples/caravan/: CMakeLists.txt  animals.c  animals.h  caravan_main.c
examples/santa_claus_inc/: CMakeLists.txt  child_data_mgmt.c  child_data_mgmt.h  santa_claus_main.c  stanta_claus_test_driver.c  tests_santa_claus.h  tour_plan.c  tour_plan.h
mclib/: CMakeLists.txt  allocator.h  dynarray.h  macros.h  params.h  smartptr.h  str.h  utest.c  utest.h
tests/: dynarray_tests.h
